Translate all collection

--- a/src/payload/translations/translation-schema.json
+++ b/src/payload/translations/translation-schema.json
@@ -815,6 +815,9 @@
         },
         "welcome": {
           "type": "string"
+        },
+        "login": {
+          "type": "string"
         }
       },
       "required": [
