--- a/src/payload/translations/zh.json
+++ b/src/payload/translations/zh.json
@@ -224,7 +224,8 @@
     "updatedSuccessfully": "更新成功。",
     "user": "用户",
     "users": "用户",
-    "welcome": "欢迎"
+    "welcome": "欢迎",
+    "login": "登录"
   },
   "operators": {
     "equals": "等于",
