--- a/src/payload/translations/translation-schema.json
+++ b/src/payload/translations/translation-schema.json
@@ -326,6 +326,9 @@
         },
         "verificationTokenInvalid": {
           "type": "string"
+        },
+        "pleaseEnterThisField": {
+          "type": "string"
         }
       },
       "required": [
