--- a/src/payload/translations/en.json
+++ b/src/payload/translations/en.json
@@ -130,7 +130,8 @@
     "swapUpload": "Swap Upload",
     "textToDisplay": "Text to display",
     "toggleBlock": "Toggle block",
-    "uploadNewLabel": "Upload new {{label}}"
+    "uploadNewLabel": "Upload new {{label}}",
+    "bank": "Bank"
   },
   "general": {
     "aboutToDelete": "You are about to delete the {{label}} <1>{{title}}</1>. Are you sure?",
