--- a/src/payload/translations/zh.json
+++ b/src/payload/translations/zh.json
@@ -131,7 +131,8 @@
     "swapUpload": "交换上传",
     "textToDisplay": "要显示的文本",
     "toggleBlock": "切换块",
-    "uploadNewLabel": "上传新的{{label}}"
+    "uploadNewLabel": "上传新的{{label}}",
+    "bank": "银行"
   },
   "general": {
     "aboutToDelete": "您即将删除{{label}} <1>{{title}}</1>。您确定要继续吗？",
