--- a/src/payload/translations/translation-schema.json
+++ b/src/payload/translations/translation-schema.json
@@ -329,6 +329,9 @@
         },
         "pleaseEnterThisField": {
           "type": "string"
+        },
+        "invalidPercent": {
+          "type": "string"
         }
       },
       "required": [
