--- a/src/payload/translations/zh.json
+++ b/src/payload/translations/zh.json
@@ -88,7 +88,8 @@
     "userLocked": "该用户由于有太多次失败的登录尝试而被锁定。",
     "valueMustBeUnique": "值必须是唯一的",
     "verificationTokenInvalid": "验证令牌无效。",
-    "pleaseEnterThisField": "请输入此字段."
+    "pleaseEnterThisField": "请输入此字段.",
+    "invalidPercent": "无效百分比"
   },
   "fields": {
     "addLabel": "添加{{label}}",
