Translate display price

--- a/src/payload/translations/vi.json
+++ b/src/payload/translations/vi.json
@@ -124,7 +124,8 @@
     "swapUpload": "Đổi bản tải lên",
     "toggleBlock": "Bật/tắt block",
     "uploadNewLabel": "Tải lên bản mới: {{label}}",
-    "bank": "Ngân hàng"
+    "bank": "Ngân hàng",
+    "displayPrice": "Giá hiển thị"
   },
   "general": {
     "aboutToDelete": "Chuẩn bị xóa {{label}} <1>{{title}}</1>. Bạn có muốn tiếp tục không?",
