--- a/src/payload/translations/en.json
+++ b/src/payload/translations/en.json
@@ -133,7 +133,8 @@
     "textToDisplay": "Text to display",
     "toggleBlock": "Toggle block",
     "uploadNewLabel": "Upload new {{label}}",
-    "bank": "Bank"
+    "bank": "Bank",
+    "displayPrice": "Display price"
   },
   "general": {
     "aboutToDelete": "You are about to delete the {{label}} <1>{{title}}</1>. Are you sure?",
