--- a/src/payload/translations/en.json
+++ b/src/payload/translations/en.json
@@ -134,7 +134,8 @@
     "toggleBlock": "Toggle block",
     "uploadNewLabel": "Upload new {{label}}",
     "bank": "Bank",
-    "displayPrice": "Display price"
+    "displayPrice": "Display price",
+    "product_description": "Product description"
   },
   "general": {
     "aboutToDelete": "You are about to delete the {{label}} <1>{{title}}</1>. Are you sure?",
