--- a/src/payload/translations/zh.json
+++ b/src/payload/translations/zh.json
@@ -134,7 +134,8 @@
     "toggleBlock": "切换块",
     "uploadNewLabel": "上传新的{{label}}",
     "bank": "银行",
-    "displayPrice": "显示价格"
+    "displayPrice": "显示价格",
+    "product_description": "产品描述"
   },
   "general": {
     "aboutToDelete": "您即将删除{{label}} <1>{{title}}</1>。您确定要继续吗？",
